// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectLink does not have environment in query 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="http://some.url/"
>
  Go somewhere!
</Link>
`;

exports[`ProjectLink has environment in query 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "http://some.url/",
      "query": Object {
        "environment": "staging",
      },
    }
  }
>
  Go somewhere!
</Link>
`;

exports[`ProjectLink has environment in query 2`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "http://some.url/",
      "query": Object {
        "environment": "",
      },
    }
  }
>
  Go somewhere!
</Link>
`;
